# uncertainty-quantification

./: experiment.py  main.py  pyproject.toml  test.py  uncertainty_estimation.py
saup/: INSTALL.md  README.md  requirements.txt  test_imports.py
saup/agents/: react_agent.py
saup/evaluation/: __init__.py
saup/models/: __init__.py  hmm_proxy.py
saup/uncertainty/: propagation.py
saup/utils/: __init__.py
saup_prototype/: .env.template  PROJECT_SUMMARY.md  QUICKSTART.md  examples.py  main.py
saup_prototype/agents/: __init__.py  base_agent.py
saup_prototype/evaluation/: metrics.py
saup_prototype/models/: llm_wrapper.py
saup_prototype/uncertainty/: __init__.py  single_step.py
saup_prototype/utils/: embeddings.py
uncertainty_quantification/: logit_methods.py  logit_methods_with_gpt4.py  logit_methods_with_uqlm.py  react_agent.py  test.py  uqlm_testing.py  white_box_demo.ipynb
