[project]
name = "uncertainty-quantification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.0.0",
    "langchain-openai>=0.3.35",
    "numpy>=1.26.4",
    "openai>=2.3.0",
    "polars>=1.34.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "uqlm>=0.1.9",
]
